<!--suppress CheckTagEmptyBody -->
<resources>
    <string name="app_name_short">PhonHarp</string>
    <string name="app_name_long">PhonHarp</string>

    <!-- Menu -->
    <string name="menu_description">Menu</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_quit">Quit</string>

    <!-- Keyboard activity -->
    <string name="key_frst"></string>
    <string name="key_scnd"></string>
    <string name="key_thrd"></string>
    <string name="key_frth"></string>
    <string name="key_half_tone"></string>
    <string name="key_hold"></string>
    <string name="scale_desc">scale</string>
    <string name="timbre_desc">timbre</string>
    <string name="offset_desc">note offset</string>

    <!-- About -->
    <string name="title_activity_about">About</string>
    <string name="version">Version 1.0.0</string>
    <string name="credits">Designed at LIM by Daniele Adriano, Giorgio Presti, Federico Avanzini, Adriano Baratè and implemented by Daniele Adriano in 2020.</string>
    <string name="lim_link_text">https://www.lim.di.unimi.it</string>
    <string name="lim_image_desc">LIM</string>

    <!-- TimbreListActivity -->
    <string name="title_activity_timbre_list_select">Select or Edit timbre</string>
    <string name="cannot_share_alert_message">Unable to share selected timbre</string>
    <string name="cannot_share_alert_ok">Ok</string>

    <!-- TimbreEditActivity -->
    <string name="timbre_name">Timbre name</string>
    <string name="percentage">%</string>
    <string name="harmonics_all">All</string>
    <string name="harmonics_odd">Odd</string>
    <string name="harmonics_all_to_odd">Pulse width</string>
    <string name="seconds">s</string>
    <string name="milliseconds">ms</string>
    <string name="decibel">dB</string>
    <string name="semitone">semitone</string>
    <string name="hertz">Hz</string>
    <string name="volume">Volume</string>
    <string name="harmonics">Harmonics</string>
    <string name="tap_hysteresis">Multitap Hysteresis</string>
    <string name="tap_hysteresis_delay">Delay</string>
    <string name="swipe_controller">Swipe controller</string>
    <string name="swipe_horizontal">Swipe horizontal</string>
    <string name="swipe_vertical">Swipe vertical</string>
    <string name="portamento">Portamento</string>
    <string name="portamento_time">Time</string>
    <string name="tremolo">Tremolo</string>
    <string name="vibrato">Vibrato</string>
    <string name="pwm">PWM</string>
    <string name="rate">Rate</string>
    <string name="depth">Depth</string>
    <string name="equalizer">Equalizer</string>
    <string name="low_shelf">Low</string>
    <string name="high_shelf">High</string>
    <string name="volume_asr">Volume Envelop</string>
    <string name="pitch_asr">Pitch Envelop</string>
    <string name="harmonics_asr">Harmonics Envelop</string>
    <string name="asr_attack">Attack</string>
    <string name="asr_release">Release</string>
    <string name="asr_initial_offset">Initial offset</string>
    <string name="asr_final_offset">Final offset</string>
    <string name="asr_initial_value">Initial value</string>
    <string name="asr_final_value">Final value</string>
    <string name="cannot_delete_alert_message">This timbre is currently in use: select another preferred timbre and try again.</string>
    <string name="cannot_delete_alert_cancel">Cancel</string>
    <string name="cannot_import_alert_message">Unable to import shared timbre</string>
    <string name="cannot_import_alert_ok">Ok</string>
    <string name="delete_alert_message">Are you sure you want to delete this timbre?</string>
    <string name="delete_alert_yes">Yes</string>
    <string name="delete_alert_no">No</string>

    <!-- SettingsActivity -->
    <string name="title_activity_settings">Settings</string>

    <!-- Tuning Preferences -->
    <string name="tuning_header">Tuning</string>
    <string name="scale_title">Scale type</string>
    <string name="note_title">Note</string>
    <string name="octave_title">Octave</string>
    <string name="note_offset">Played note offset</string>

    <string name="pan_mode">Pan</string>

    <!-- Keyboard Preferences -->
    <string name="keyboard_header">Keyboard</string>
    <string name="handedness_title">Handedness</string>
    <string name="handedness_summary_left">Left-handed</string>
    <string name="handedness_summary_right">Right-handed</string>
    <string name="halftone_title">Show half-tone button</string>
    <string name="halftone_summary_on">Show</string>
    <string name="halftone_summary_off">Hide</string>
    <string name="gyro_title">Enable rotation control</string>
    <string name="gyro_summary_on">Enabled</string>
    <string name="gyro_summary_off">Disabled</string>

    <!-- Timbre Preferences -->
    <string name="timbre_header">Sound</string>
    <string name="timbre_title">Open timbre preferences</string>
    <string name="timbre_save">Save</string>
    <string name="timbre_cancel">Cancel</string>
    <string name="timbre_delete">Delete</string>

</resources>
