<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/keyboard_header">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="halftone"
            app:summaryOff="@string/halftone_summary_off"
            app:summaryOn="@string/halftone_summary_on"
            app:title="@string/halftone_title" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="handedness"
            app:summaryOff="@string/handedness_summary_left"
            app:summaryOn="@string/handedness_summary_right"
            app:title="@string/handedness_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/timbre_header">
        <Preference
            app:key="timbre_list"
            app:title="@string/timbre_title">
            <intent
                android:targetPackage="com.unimi.lim.hmi"
                android:targetClass="com.unimi.lim.hmi.ui.TimbreListActivity"/>
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
