<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_keyboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:focusable="auto"
    android:focusableInTouchMode="false"
    tools:context=".ui.KeyboardActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/menu_button"
        style="?attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/menu_description"
        android:onClick="showMenuPopup"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/ic_menu" />

    <Button
        android:id="@+id/key_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#FFFFFF"
        android:elevation="0dp"
        android:enabled="false"
        android:text="@string/key_hold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/key_frst"
        android:layout_width="250dp"
        android:layout_height="125dp"
        android:elevation="1dp"
        android:text="@string/key_frst"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/key_scnd" />

    <Button
        android:id="@+id/key_scnd"
        android:layout_width="250dp"
        android:layout_height="125dp"
        android:elevation="1dp"
        android:text="@string/key_scnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/key_thrd" />

    <Button
        android:id="@+id/key_frth"
        android:layout_width="250dp"
        android:layout_height="125dp"
        android:elevation="1dp"
        android:text="@string/key_frth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/key_thrd"
        android:layout_width="250dp"
        android:layout_height="125dp"
        android:elevation="1dp"
        android:text="@string/key_thrd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/key_frth" />

    <Button
        android:id="@+id/key_modifier"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:text="@string/key_half_tone"
        app:layout_constraintEnd_toStartOf="@+id/key_scnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/key_scnd" />

</androidx.constraintlayout.widget.ConstraintLayout>