<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/timbre_detail_layout_margin"
        android:orientation="vertical">


        <Switch
            android:id="@+id/equalizer_enabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/timbre_detail_component_margin"
            android:text="@string/equalizer"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorAccent" />


        <LinearLayout
            android:id="@+id/equalizer_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/equalizer_low_shelf_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/timbre_detail_component_margin"
                android:layout_marginTop="@dimen/timbre_detail_component_margin"
                android:layout_marginEnd="@dimen/timbre_detail_component_margin"
                android:text="@string/low_shelf"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/equalizer_low_shelf_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/timbre_detail_component_margin"
                android:layout_marginEnd="@dimen/timbre_detail_component_margin"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

            <SeekBar
                android:id="@+id/equalizer_low_shelf_seek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/timbre_detail_component_margin"
                android:max="30" />

            <TextView
                android:id="@+id/equalizer_high_shelf_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/timbre_detail_component_margin"
                android:layout_marginTop="@dimen/timbre_detail_component_margin"
                android:layout_marginEnd="@dimen/timbre_detail_component_margin"
                android:text="@string/high_shelf"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/equalizer_high_shelf_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/timbre_detail_component_margin"
                android:layout_marginEnd="@dimen/timbre_detail_component_margin"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/darker_gray" />

            <SeekBar
                android:id="@+id/equalizer_high_shelf_seek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/timbre_detail_component_margin"
                android:max="30" />
        </LinearLayout>

    </LinearLayout>
</merge>